<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/txt_view1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/sign_up"
        android:textColor="#080F4A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/txt_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/to_start_working"
        android:textColor="#B5B6B9"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view1" />

    <EditText
        android:id="@+id/edt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_view2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:autofillHints="phone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#080F4A"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:iconSize="40dp"
        app:iconGravity="top"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@id/txt_view3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_txt"
        android:focusable="true" />

    <TextView
        android:id="@+id/txt_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:text="@string/back_to_sign_in"
        android:textColor="#A0A8D6"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>